// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseLinks ![[image.png]] 1`] = `
Array [
  Object {
    "alias": undefined,
    "transclude": true,
    "type": "internal",
    "value": "image.png",
  },
]
`;

exports[`parseLinks ![[link 1]] 1`] = `
Array [
  Object {
    "alias": undefined,
    "transclude": true,
    "type": "internal",
    "value": "link 1",
  },
]
`;

exports[`parseLinks ![Lovely image](../houses/img.png) 1`] = `
Array [
  Object {
    "alias": "Lovely image",
    "type": "internal",
    "value": "../houses/img.png",
  },
]
`;

exports[`parseLinks <http://example.org> 1`] = `
Array [
  Object {
    "alias": undefined,
    "type": "external",
    "value": "http://example.org",
  },
]
`;

exports[`parseLinks <https://example.org> 1`] = `
Array [
  Object {
    "alias": undefined,
    "type": "external",
    "value": "https://example.org",
  },
]
`;

exports[`parseLinks [[/full/path/link 1.md]] 1`] = `
Array [
  Object {
    "alias": undefined,
    "type": "internal",
    "value": "/full/path/link 1.md",
  },
]
`;

exports[`parseLinks [[/full/path/link 1]] 1`] = `
Array [
  Object {
    "alias": undefined,
    "type": "internal",
    "value": "/full/path/link 1",
  },
]
`;

exports[`parseLinks [[link 1 |Alias 1]] 1`] = `
Array [
  Object {
    "alias": "Alias 1",
    "type": "internal",
    "value": "link 1 ",
  },
]
`;

exports[`parseLinks [[link 1]] 1`] = `
Array [
  Object {
    "alias": undefined,
    "type": "internal",
    "value": "link 1",
  },
]
`;

exports[`parseLinks [Alias 2](http://example.com) 1`] = `
Array [
  Object {
    "alias": "Alias 2",
    "type": "external",
    "value": "http://example.com",
  },
]
`;

exports[`parseLinks [Alias 3](https://example.com) 1`] = `
Array [
  Object {
    "alias": "Alias 3",
    "type": "external",
    "value": "https://example.com",
  },
]
`;

exports[`parseLinks [protocol unknown](file://) 1`] = `
Array [
  Object {
    "alias": "protocol unknown",
    "type": "internal",
    "value": "file://",
  },
]
`;

exports[`parseLinks [protocol unknown](hello) 1`] = `
Array [
  Object {
    "alias": "protocol unknown",
    "type": "internal",
    "value": "hello",
  },
]
`;

exports[`parseLinks http://example.com 1`] = `
Array [
  Object {
    "alias": undefined,
    "type": "external",
    "value": "http://example.com",
  },
]
`;

exports[`parseLinks https://example.com 1`] = `
Array [
  Object {
    "alias": undefined,
    "type": "external",
    "value": "https://example.com",
  },
]
`;

exports[`parseLinks no link 1`] = `Array []`;

exports[`parseLinks some text http://example.com more text 1`] = `
Array [
  Object {
    "alias": undefined,
    "type": "external",
    "value": "http://example.com",
  },
]
`;

exports[`parseLinks some text2 https://example.com more text 1`] = `
Array [
  Object {
    "alias": undefined,
    "type": "external",
    "value": "https://example.com",
  },
]
`;
